[gd_scene load_steps=11 format=2]

[ext_resource path="res://Zombie.gd" type="Script" id=1]
[ext_resource path="res://NecroBoiSpellMove1_New.png" type="Texture" id=2]
[ext_resource path="res://NecroBoiSpellMove2_New.png" type="Texture" id=3]
[ext_resource path="res://NecroBoi_Spell_1_New.png" type="Texture" id=4]
[ext_resource path="res://NecroBoi_Spell_2_New.png" type="Texture" id=5]
[ext_resource path="res://Body.png" type="Texture" id=6]
[ext_resource path="res://Audio_zombie_Idle.wav" type="AudioStream" id=7]


[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -16, 10, -8, 10, 16, -10, 16, -10, -8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Move",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.0835, 12.9804 )

[node name="Zombie" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.282353, 0.392157, 0.0117647, 1 )
position = Vector2( -0.0769424, 0 )
scale = Vector2( 0.128, 0.128 )
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="Down" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 46

[node name="Down2" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 46

[node name="Down3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 46

[node name="LeftEyes" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( -96, 0 )

[node name="LeftEyesUp" type="RayCast2D" parent="."]
position = Vector2( 0, -48 )
enabled = true
cast_to = Vector2( -42, 0 )

[node name="LeftEyesWall" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( -24, 0 )
collision_mask = 14

[node name="RightEyes" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 96, 0 )

[node name="RightEyesUp" type="RayCast2D" parent="."]
position = Vector2( 0, -48 )
enabled = true
cast_to = Vector2( 42, 0 )

[node name="RightEyesWall" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 14

[node name="Radius" type="Sprite" parent="."]
self_modulate = Color( 0, 0.635294, 0, 0.12549 )
scale = Vector2( 0.8, 0.8 )
z_index = -60
texture = ExtResource( 6 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 0.511543 )
shape = SubResource( 3 )

[node name="Weee" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -42.0

[connection signal="mouse_entered" from="." to="." method="_on_Zombie_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Zombie_mouse_exited"]
